log/build_2024-12-05_16-09-57/my_first_pkg/stdout_stderr.log
running egg_info
writing ../../build/my_first_pkg/my_first_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/my_first_pkg/my_first_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/my_first_pkg/my_first_pkg.egg-info/entry_points.txt
writing requirements to ../../build/my_first_pkg/my_first_pkg.egg-info/requires.txt
writing top-level names to ../../build/my_first_pkg/my_first_pkg.egg-info/top_level.txt
reading manifest file '../../build/my_first_pkg/my_first_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/my_first_pkg/my_first_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying my_first_pkg/turtlesim_pose_sub.py -> /home/kim/ros2_ws/build/my_first_pkg/build/lib/my_first_pkg
running install
running install_lib
copying /home/kim/ros2_ws/build/my_first_pkg/build/lib/my_first_pkg/turtlesim_pose_sub.py -> /home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg
byte-compiling /home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg/turtlesim_pose_sub.py to turtlesim_pose_sub.cpython-310.pyc
  File "/home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg/turtlesim_pose_sub.py", line 22
    self.get_logger().info(f"x: {pose.x},y: {pose.y}, theta: {pose.theta},
                           ^
SyntaxError: unterminated string literal (detected at line 22)

running install_data
running install_egg_info
removing '/home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_first_pkg/my_first_pkg.egg-info to /home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing counter_node script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing counter_pub script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing robot_station2 script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing sub_sub script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing turtle_color script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing turtle_pose script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing turtlesim_controller script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
Installing turtlesim_pub script to /home/kim/ros2_ws/install/my_first_pkg/lib/my_first_pkg
writing list of installed files to '/home/kim/ros2_ws/build/my_first_pkg/install.log'
